@@ -1,4 +1,7 @@
 2009-07-26  Michael Rash  <mbr@cipherdyne.org>
+    * Implemented -s command line argument on the fwknop client command line
+      so that the IP "0.0.0.0" can be sent within an SPA packet.  The fwknopd
+      server can wrap access requirements around this IP.
     * Initial public release of fwknop-c-0.62.
 
 2009-07-23  Michael Rash  <mbr@cipherdyne.org>
